attempting to fix missing background

--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ h2 {
   height: 100%;
   width: 100%;
   position: relative;
-  background: url(../img/bg2.JPG) no-repeat center center fixed; 
+  background: url("../img/bg2.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -162,7 +162,7 @@ h2 {
 /* Footer */
 
 .copyright-footer {
-  background: url(../img/bg2.JPG) center fixed;
+  background: url("../img/bg2.jpg") center fixed;
   color: #ffffff;
   padding: 50px 0;
 }
